--- a/oh_my_dayum.ipynb
+++ b/oh_my_dayum.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 資料預處理"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -20,21 +13,142 @@
      "text": [
       "Using TensorFlow backend.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_1 (Dense)              (None, 784)               615440    \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 784)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 784)               615440    \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 784)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 10)                7850      \n",
+      "=================================================================\n",
+      "Total params: 1,238,730\n",
+      "Trainable params: 1,238,730\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Train on 48000 samples, validate on 12000 samples\n",
+      "Epoch 1/50\n",
+      " - 2s - loss: 0.9370 - acc: 0.6794 - val_loss: 0.6253 - val_acc: 0.7616\n",
+      "Epoch 2/50\n",
+      " - 1s - loss: 0.5903 - acc: 0.7817 - val_loss: 0.4676 - val_acc: 0.8342\n",
+      "Epoch 3/50\n",
+      " - 1s - loss: 0.5087 - acc: 0.8106 - val_loss: 0.4380 - val_acc: 0.8355\n",
+      "Epoch 4/50\n",
+      " - 1s - loss: 0.4694 - acc: 0.8275 - val_loss: 0.4401 - val_acc: 0.8422\n",
+      "Epoch 5/50\n",
+      " - 1s - loss: 0.4375 - acc: 0.8384 - val_loss: 0.3865 - val_acc: 0.8568\n",
+      "Epoch 6/50\n",
+      " - 1s - loss: 0.4107 - acc: 0.8478 - val_loss: 0.4042 - val_acc: 0.8487\n",
+      "Epoch 7/50\n",
+      " - 1s - loss: 0.3963 - acc: 0.8527 - val_loss: 0.3546 - val_acc: 0.8743\n",
+      "Epoch 8/50\n",
+      " - 1s - loss: 0.3826 - acc: 0.8591 - val_loss: 0.3731 - val_acc: 0.8594\n",
+      "Epoch 9/50\n",
+      " - 1s - loss: 0.3695 - acc: 0.8624 - val_loss: 0.3868 - val_acc: 0.8581\n",
+      "Epoch 10/50\n",
+      " - 1s - loss: 0.3543 - acc: 0.8685 - val_loss: 0.4354 - val_acc: 0.8399\n",
+      "Epoch 11/50\n",
+      " - 1s - loss: 0.3518 - acc: 0.8689 - val_loss: 0.3451 - val_acc: 0.8796\n",
+      "Epoch 12/50\n",
+      " - 1s - loss: 0.3384 - acc: 0.8742 - val_loss: 0.3678 - val_acc: 0.8694\n",
+      "Epoch 13/50\n",
+      " - 1s - loss: 0.3309 - acc: 0.8765 - val_loss: 0.3232 - val_acc: 0.8883\n",
+      "Epoch 14/50\n",
+      " - 1s - loss: 0.3199 - acc: 0.8812 - val_loss: 0.3408 - val_acc: 0.8741\n",
+      "Epoch 15/50\n",
+      " - 1s - loss: 0.3206 - acc: 0.8800 - val_loss: 0.3777 - val_acc: 0.8624\n",
+      "Epoch 16/50\n",
+      " - 1s - loss: 0.3096 - acc: 0.8841 - val_loss: 0.3429 - val_acc: 0.8754\n",
+      "Epoch 17/50\n",
+      " - 1s - loss: 0.3104 - acc: 0.8845 - val_loss: 0.3256 - val_acc: 0.8888\n",
+      "Epoch 18/50\n",
+      " - 1s - loss: 0.2999 - acc: 0.8882 - val_loss: 0.3146 - val_acc: 0.8887\n",
+      "Epoch 19/50\n",
+      " - 1s - loss: 0.2920 - acc: 0.8908 - val_loss: 0.3256 - val_acc: 0.8880\n",
+      "Epoch 20/50\n",
+      " - 1s - loss: 0.2950 - acc: 0.8890 - val_loss: 0.3771 - val_acc: 0.8631\n",
+      "Epoch 21/50\n",
+      " - 1s - loss: 0.2862 - acc: 0.8924 - val_loss: 0.3560 - val_acc: 0.8772\n",
+      "Epoch 22/50\n",
+      " - 1s - loss: 0.2822 - acc: 0.8938 - val_loss: 0.3173 - val_acc: 0.8872\n",
+      "Epoch 23/50\n",
+      " - 1s - loss: 0.2746 - acc: 0.8946 - val_loss: 0.3287 - val_acc: 0.8848\n",
+      "Epoch 24/50\n",
+      " - 1s - loss: 0.2754 - acc: 0.8978 - val_loss: 0.3100 - val_acc: 0.8908\n",
+      "Epoch 25/50\n",
+      " - 1s - loss: 0.2690 - acc: 0.8982 - val_loss: 0.3063 - val_acc: 0.8940\n",
+      "Epoch 26/50\n",
+      " - 1s - loss: 0.2679 - acc: 0.8986 - val_loss: 0.3211 - val_acc: 0.8899\n",
+      "Epoch 27/50\n",
+      " - 1s - loss: 0.2639 - acc: 0.8988 - val_loss: 0.3106 - val_acc: 0.8914\n",
+      "Epoch 28/50\n",
+      " - 1s - loss: 0.2627 - acc: 0.9017 - val_loss: 0.3101 - val_acc: 0.8943\n",
+      "Epoch 29/50\n",
+      " - 1s - loss: 0.2606 - acc: 0.8998 - val_loss: 0.3147 - val_acc: 0.8891\n",
+      "Epoch 30/50\n",
+      " - 1s - loss: 0.2546 - acc: 0.9039 - val_loss: 0.3249 - val_acc: 0.8893\n",
+      "Epoch 31/50\n",
+      " - 1s - loss: 0.2502 - acc: 0.9047 - val_loss: 0.3202 - val_acc: 0.8868\n",
+      "Epoch 32/50\n",
+      " - 1s - loss: 0.2469 - acc: 0.9067 - val_loss: 0.3010 - val_acc: 0.8939\n",
+      "Epoch 33/50\n",
+      " - 1s - loss: 0.2441 - acc: 0.9072 - val_loss: 0.3032 - val_acc: 0.8939\n",
+      "Epoch 34/50\n",
+      " - 1s - loss: 0.2464 - acc: 0.9061 - val_loss: 0.3213 - val_acc: 0.8923\n",
+      "Epoch 35/50\n",
+      " - 1s - loss: 0.2413 - acc: 0.9087 - val_loss: 0.3322 - val_acc: 0.8863\n",
+      "Epoch 36/50\n",
+      " - 1s - loss: 0.2418 - acc: 0.9079 - val_loss: 0.3281 - val_acc: 0.8889\n",
+      "Epoch 37/50\n",
+      " - 1s - loss: 0.2360 - acc: 0.9094 - val_loss: 0.3117 - val_acc: 0.8987\n",
+      "Epoch 38/50\n",
+      " - 1s - loss: 0.2349 - acc: 0.9101 - val_loss: 0.3098 - val_acc: 0.8962\n",
+      "Epoch 39/50\n",
+      " - 1s - loss: 0.2277 - acc: 0.9123 - val_loss: 0.3415 - val_acc: 0.8786\n",
+      "Epoch 40/50\n",
+      " - 1s - loss: 0.2285 - acc: 0.9127 - val_loss: 0.3280 - val_acc: 0.8920\n",
+      "Epoch 41/50\n",
+      " - 1s - loss: 0.2275 - acc: 0.9141 - val_loss: 0.3238 - val_acc: 0.8910\n",
+      "Epoch 42/50\n",
+      " - 1s - loss: 0.2262 - acc: 0.9129 - val_loss: 0.3087 - val_acc: 0.9001\n",
+      "Epoch 43/50\n",
+      " - 1s - loss: 0.2169 - acc: 0.9171 - val_loss: 0.3229 - val_acc: 0.8933\n",
+      "Epoch 44/50\n",
+      " - 1s - loss: 0.2189 - acc: 0.9157 - val_loss: 0.3467 - val_acc: 0.8938\n",
+      "Epoch 45/50\n",
+      " - 1s - loss: 0.2183 - acc: 0.9174 - val_loss: 0.3156 - val_acc: 0.8962\n",
+      "Epoch 46/50\n",
+      " - 1s - loss: 0.2170 - acc: 0.9168 - val_loss: 0.3186 - val_acc: 0.8941\n",
+      "Epoch 47/50\n",
+      " - 1s - loss: 0.2166 - acc: 0.9182 - val_loss: 0.3178 - val_acc: 0.8944\n",
+      "Epoch 48/50\n",
+      " - 1s - loss: 0.2114 - acc: 0.9190 - val_loss: 0.3114 - val_acc: 0.9006\n",
+      "Epoch 49/50\n",
+      " - 1s - loss: 0.2128 - acc: 0.9195 - val_loss: 0.3327 - val_acc: 0.8940\n",
+      "Epoch 50/50\n",
+      " - 1s - loss: 0.2080 - acc: 0.9202 - val_loss: 0.3218 - val_acc: 0.9003\n"
+     ]
     }
    ],
    "source": [
     "from keras.utils import np_utils\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout\n",
+    "from keras.optimizers import RMSprop\n",
     "import numpy as np\n",
-    "np.random.seed(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "np.random.seed(10)\n",
     "import csv\n",
+    "\n",
     "with open('fashion-mnist_train.csv', newline='') as trainfile:\n",
     "    rows = csv.reader(trainfile)\n",
     "    headers = next(rows)\n",
@@ -44,261 +158,40 @@
     "        x.append(row[1:])\n",
     "        y.append(row[0])\n",
     "    x_train_image = np.array(x, dtype=np.float)\n",
-    "    y_train_label = np.array(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    y_train_label = np.array(y)\n",
     "with open('test_data.csv', newline='') as testfile:\n",
     "    rows = csv.reader(testfile)\n",
     "    headers = next(rows)\n",
     "    x = []\n",
     "    for row in rows:\n",
     "        x.append(row)\n",
-    "    x_test_image = np.array(x, dtype=np.float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    x_test_image = np.array(x, dtype=np.float)\n",
     "x_Train = x_train_image.reshape(60000, 784).astype('float32')\n",
-    "x_Test = x_test_image.reshape(10000, 784).astype('float32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "x_Test = x_test_image.reshape(10000, 784).astype('float32')\n",
     "x_Train_normalize = x_Train / 255\n",
-    "x_Test_normalize = x_Test / 255"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "x_Test_normalize = x_Test / 255\n",
     "y_Train_OneHot = np_utils.to_categorical(y_train_label)\n",
-    "# y_Test_OneHot = np_utils.to_categorical(y_test_label)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# 建立模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout\n",
-    "from keras.optimizers import RMSprop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = Sequential()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dense(units=2000, \n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(units=784, \n",
     "                input_dim=784, \n",
     "                kernel_initializer='normal', \n",
-    "                activation='relu'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dropout(0.2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dense(units=2000, \n",
+    "                activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(units=784, \n",
     "                kernel_initializer='normal', \n",
-    "                activation='relu'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dropout(0.2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
     "model.add(Dense(units=10, \n",
     "                kernel_initializer='normal', \n",
-    "                activation='softmax'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense_1 (Dense)              (None, 1000)              785000    \n",
-      "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 1000)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1000)              1001000   \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 1000)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                10010     \n",
-      "=================================================================\n",
-      "Total params: 1,796,010\n",
-      "Trainable params: 1,796,010\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(model.summary())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 訓練模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                activation='softmax'))\n",
+    "print(model.summary())\n",
     "model.compile(loss='categorical_crossentropy', \n",
-    "              optimizer=RMSprop(), metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 48000 samples, validate on 12000 samples\n",
-      "Epoch 1/20\n",
-      " - 3s - loss: 0.8209 - acc: 0.7281 - val_loss: 0.5501 - val_acc: 0.7819\n",
-      "Epoch 2/20\n",
-      " - 1s - loss: 0.5074 - acc: 0.8156 - val_loss: 0.4934 - val_acc: 0.8109\n",
-      "Epoch 3/20\n",
-      " - 1s - loss: 0.4409 - acc: 0.8373 - val_loss: 0.4510 - val_acc: 0.8347\n",
-      "Epoch 4/20\n",
-      " - 1s - loss: 0.4065 - acc: 0.8475 - val_loss: 0.3648 - val_acc: 0.8669\n",
-      "Epoch 5/20\n",
-      " - 1s - loss: 0.3790 - acc: 0.8585 - val_loss: 0.3750 - val_acc: 0.8673\n",
-      "Epoch 6/20\n",
-      " - 1s - loss: 0.3658 - acc: 0.8639 - val_loss: 0.3491 - val_acc: 0.8780\n",
-      "Epoch 7/20\n",
-      " - 1s - loss: 0.3474 - acc: 0.8693 - val_loss: 0.3846 - val_acc: 0.8656\n",
-      "Epoch 8/20\n",
-      " - 1s - loss: 0.3369 - acc: 0.8741 - val_loss: 0.3503 - val_acc: 0.8755\n",
-      "Epoch 9/20\n",
-      " - 1s - loss: 0.3284 - acc: 0.8768 - val_loss: 0.3393 - val_acc: 0.8797\n",
-      "Epoch 10/20\n",
-      " - 1s - loss: 0.3169 - acc: 0.8819 - val_loss: 0.3389 - val_acc: 0.8802\n",
-      "Epoch 11/20\n",
-      " - 1s - loss: 0.3104 - acc: 0.8839 - val_loss: 0.3546 - val_acc: 0.8792\n",
-      "Epoch 12/20\n",
-      " - 1s - loss: 0.2991 - acc: 0.8887 - val_loss: 0.3234 - val_acc: 0.8917\n",
-      "Epoch 13/20\n",
-      " - 1s - loss: 0.2963 - acc: 0.8903 - val_loss: 0.3403 - val_acc: 0.8837\n",
-      "Epoch 14/20\n",
-      " - 1s - loss: 0.2906 - acc: 0.8913 - val_loss: 0.3374 - val_acc: 0.8773\n",
-      "Epoch 15/20\n",
-      " - 1s - loss: 0.2835 - acc: 0.8950 - val_loss: 0.3477 - val_acc: 0.8806\n",
-      "Epoch 16/20\n",
-      " - 1s - loss: 0.2785 - acc: 0.8962 - val_loss: 0.3417 - val_acc: 0.8918\n",
-      "Epoch 17/20\n",
-      " - 1s - loss: 0.2712 - acc: 0.8983 - val_loss: 0.3413 - val_acc: 0.8901\n",
-      "Epoch 18/20\n",
-      " - 1s - loss: 0.2671 - acc: 0.8998 - val_loss: 0.3235 - val_acc: 0.8891\n",
-      "Epoch 19/20\n",
-      " - 1s - loss: 0.2649 - acc: 0.9004 - val_loss: 0.3462 - val_acc: 0.8838\n",
-      "Epoch 20/20\n",
-      " - 1s - loss: 0.2599 - acc: 0.9030 - val_loss: 0.3197 - val_acc: 0.8961\n"
-     ]
-    }
-   ],
-   "source": [
+    "              optimizer=RMSprop(), metrics=['accuracy'])\n",
     "train_history = model.fit(x=x_Train_normalize,\n",
     "                         y=y_Train_OneHot,validation_split=0.2, \n",
-    "                         epochs=20, batch_size=500,verbose=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 ... 8 8 1]\n"
-     ]
-    }
-   ],
-   "source": [
+    "                         epochs=50, batch_size=1000,verbose=2)\n",
     "prediction = model.predict_classes(x_Test)\n",
-    "print(prediction)\n",
     "with open('output.csv', 'w', newline='') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    writer.writerow(['Id', 'label'])\n",
